LFD-116 [web] refactor header

--- a/src/app/component/organisms/content/content.component.html
+++ b/src/app/component/organisms/content/content.component.html
@@ -1,4 +1,4 @@
-<div class="content" role="main">
+<div class="content" role="main" [class.header-margin] = "!minimalHeader">
   <ng-content></ng-content>
   <p-toast></p-toast>
   <p-confirmDialog></p-confirmDialog>
