--- a/src/app/component/organisms/content/content.component.scss
+++ b/src/app/component/organisms/content/content.component.scss
@@ -1,7 +1,10 @@
 .content {
-  margin: 82px auto 32px;
-  padding: 0 16px;
+  padding: 0 8px;
   min-height: calc(100vh - 150px);
+}
+
+.content.header-margin{
+  margin: 82px auto 32px;
 }
 
 :host *{
