--- a/src/app/component/organisms/share-session-code-dialog/share-session-code-dialog.component.html
+++ b/src/app/component/organisms/share-session-code-dialog/share-session-code-dialog.component.html
@@ -1,4 +1,5 @@
-<p-dialog header="Share Link" [(visible)]="visible"  [draggable]="false" (onHide)="onHideDialog()" [baseZIndex]="102">
+<div *ngIf="environmentInfo" >
+  <p-dialog header="Share Link" [(visible)]="visible"  [draggable]="false" (onHide)="onHideDialog()" [baseZIndex]="102">
     <p>Successfully created new Session.</p>
     <p>
       <a href="{{getShareLink()}}" target="_blank">Participant-Link</a>
@@ -7,5 +8,7 @@
     <p>Session Code: <button pButton pRipple type="button" title="copy" class="p-button-outlined" label="{{sessionCode}}" ngxClipboard [cbContent]="this.sessionCode"  ></button></p>
     <ng-template pTemplate="footer"></ng-template>
 
-</p-dialog>
-<app-backdrop [visible]="visible" ></app-backdrop>
+  </p-dialog>
+  <app-backdrop [visible]="visible" ></app-backdrop>
+</div>
+
