fixed errors caused by styling option generated at https://qr-code-styling.com/

--- a/src/app/component/organisms/share-session-code-dialog/share-session-code-dialog.component.html
+++ b/src/app/component/organisms/share-session-code-dialog/share-session-code-dialog.component.html
@@ -9,8 +9,8 @@
     <ng-template pTemplate="footer"></ng-template>
     
     <ngx-qrcode-styling
-      [data]="{{getShareLink()}}"
-      [config]=".\qrCodeOptions.json"
+      [data]="getShareLink()"
+      [config]="config"
       >
     </ngx-qrcode-styling>
       
