--- a/src/app/component/molecules/survey-live-view-dialog/survey-live-view-dialog.component.html
+++ b/src/app/component/molecules/survey-live-view-dialog/survey-live-view-dialog.component.html
@@ -1,4 +1,13 @@
-<p-dialog *ngIf="template" [header]="template.name" [visible]="isVisible()"  [draggable]="false" [closable]="false"   [style]="{minWidth: '50vw'}" >
+<p-dialog *ngIf="survey && !survey.background" [header]="survey.template.name" [visible]="isVisible()"  [draggable]="false" [closable]="false"   [style]="{minWidth: '50vw'}" >
+
+  <ng-template [ngIf]="enableMinimize" >
+    <ng-template pTemplate="header">
+      <div class="p-dialog-title" >{{survey.template.name}}</div>
+      <div class="p-dialog-header-icons" *ngIf="!displayResult" >
+        <button pButton pRipple type="button" icon="pi pi-window-minimize" class="p-button-rounded p-button-secondary p-button-text" (click)="clickMinimize()" ></button>
+      </div>
+    </ng-template>
+  </ng-template>
 
 
   <div class="grid p-fluid">
