LFD-128 [web] generate qr code by shared link to presenter

--- a/src/app/component/organisms/share-session-code-dialog/share-session-code-dialog.component.html
+++ b/src/app/component/organisms/share-session-code-dialog/share-session-code-dialog.component.html
@@ -7,13 +7,14 @@
     </p>
     <p>Session Code: <button pButton pRipple type="button" title="copy" class="p-button-outlined" label="{{sessionCode}}" ngxClipboard [cbContent]="this.sessionCode"  ></button></p>
     <ng-template pTemplate="footer"></ng-template>
-    <ngx-qrcode-styling
-      [data]="getShareLink()"
-      [image]="'../../../assets/lecturefeed_logo.svg'"
-      [config]="config"
+    <div class="qr-code-container" >
+      <ngx-qrcode-styling
+        [data]="getShareLink()"
+        [image]="'../../../assets/lecturefeed_logo.svg'"
+        [config]="config"
       >
-    </ngx-qrcode-styling>
-
+      </ngx-qrcode-styling>
+    </div>
   </p-dialog>
   <app-backdrop [visible]="visible" ></app-backdrop>
 </div>
