--- a/src/app/component/organisms/share-session-code-dialog/share-session-code-dialog.component.html
+++ b/src/app/component/organisms/share-session-code-dialog/share-session-code-dialog.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="environmentInfo" >
+<div *ngIf="visible" >
   <p-dialog header="Share Link" [(visible)]="visible" [maximizable]="true" [draggable]="false" (onHide)="onHideDialog()" [baseZIndex]="102">
     <p>Successfully created new Session.</p>
     <p>
